--- a/backend/Lambda/API/sqlc.yaml
+++ b/backend/Lambda/API/sqlc.yaml
@@ -2,7 +2,7 @@ version: "2"
 sql:
   - engine: "postgresql"
     queries: "queries.sql"
-    schema: "Schema/init.sql"
+    schema: "../../Schema/init.sql"
     gen:
       go:
         package: "sqlc"
