--- a/test/.env.example
+++ b/test/.env.example
@@ -1,6 +1,6 @@
 # FCM E2E Test Environment Variables
 # Copy this file to .env and fill in your values:
-#   cp env.example .env
+#   cp .env.example .env
 
 # Required: Backend API URL
 API_BASE_URL=https://your-api-gateway-url.amazonaws.com/dev
