change after capliot and make integration test

--- a/test/.env.example
+++ b/test/.env.example
@@ -6,7 +6,7 @@
 API_BASE_URL=https://your-api-gateway-url.amazonaws.com/dev
 
 # Optional: User ID to send test message to (default: debug-user-1)
-TEST_USER_ID=debug-user-1
+TEST_USER_ID=your_id_
 
 # Optional: Timeout in seconds for polling (default: 30)
 TIMEOUT_SECONDS=30
